<resources>
    <string name="app_name">sorteadorDeNumeros</string>
    <string name="background_principal">Background Principal</string>
    <string name="img_do_logo">imagem do logo</string>
    <string name="sorteador_de_numeros">SORTEADOR DE NÚMEROS</string>
    <string name="sortear">Sortear</string>
    <string name="sortear_novamente">Sortear Novamente</string>
    <string name="como_funciona_o_sorteador_de_numeros">Como funciona o sorteador de números?</string>
    <string name="o_sorteador_utiliza_um_algoritmo">O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</string>
    <string name="sim_voc_pode_definir_os_valores">Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</string>
    <string name="posso_escolher_o_intervalo_dos_n_meros">Posso escolher o intervalo dos números?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quero_sortear">Quero sortear</string>
    <string name="defina_o_intervalo_e_a_quantidade">Defina o intervalo e a quantidade de números, clique em \'Sortear\' e veja os resultados na tela. É rápido e fácil!</string>
    <string name="numeros">NÚMEROS</string>
    <string name="_1">1</string>
    <string name="de">de</string>
    <string name="at">até</string>
    <string name="nao_repetir_numeros">Não repetir números</string>
    <string name="resultado_sorteio">RESULTADO SORTEIO</string>
    <string name="_1_resultado"><![CDATA[1º resultado]]></string>
    <string name="numero_do_sorteio">%1$sº RESULTADO</string>
    <string name="_100">100</string>
    <string name="_2">2</string>
</resources>